# siges-backend

./: .dockerignore  .env.dev.example  .env.production.example  .gitignore  CLAUDE.md  Dockerfile  Dockerfile.prod  LIGAR_BREVO_CONVERSATIONS.md  MIGRACAO_BUCKET_B2.md  PROMPT_DASHBOARD_OPERACIONAL_SPRINTS.md  PROMPT_GESTAO_AGUA_SPRINTS.md  migrar.py  migrar_colunas_lavagem.py  migrar_dashboard_lavagem.py  migrar_dashboard_lavagem_fase4_5.py  migrar_dashboard_lavagem_fase6.py  migrar_gestao_agua_fase1_2.py  migrar_gestao_agua_fase3_8.py  migrar_gestao_agua_fase4.py  migrar_remover_combustivel.py  migrar_remover_primavera.py  migrar_veiculos_catalogo.py  migrate.py  migrate_drop_role.py  pyproject.toml  render.yaml  requirements-dev.txt  requirements-prod.txt  requirements.txt  seed.py  seed_modulos.py  seed_novas_permissoes.sql  seed_permissoes.py  seed_producao.py  seed_produtos.py  seed_veiculos_catalogo.py
app/: config.py  main.py
app/application/dtos/: __init__.py
app/application/use_cases/: __init__.py
app/domain/entities/: __init__.py
app/domain/enums/: __init__.py
app/domain/events/: __init__.py
app/domain/exceptions/: __init__.py
app/domain/repositories/: __init__.py
app/domain/services/: __init__.py  erp_gateway.py  stock_service.py
app/domain/value_objects/: money.py
app/infrastructure/: audit.py  scheduler.py
app/infrastructure/auth/: __init__.py  dependencies.py
app/infrastructure/cache/: __init__.py
app/infrastructure/database/: __init__.py  models.py
app/infrastructure/email/: __init__.py
app/infrastructure/erp/: __init__.py  local_gateway.py  primavera_gateway.py
app/infrastructure/export/: __init__.py  pdf.py  (+3 more)
(+68 files in other folders)
