[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[project]
name = "financeiro-bi"
version = "1.0.0"
description = "Sistema Enterprise de Gestão Financeira"
authors = [{name = "Jennos Team"}]
requires-python = ">=3.11"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.104.0"
uvicorn = {version = "^0.24.0", extras = ["standard"]}
sqlalchemy = "^2.0.23"
alembic = "^1.12.1"
psycopg = {version = "^3.17.0", extras = ["binary"]}
pydantic = "^2.5.0"
pydantic-settings = "^2.1.0"
python-multipart = "^0.0.6"
python-jose = {version = "^3.3.0", extras = ["cryptography"]}
passlib = {version = "^1.7.4", extras = ["bcrypt"]}
python-dotenv = "^1.0.0"
redis = "^5.0.1"
celery = "^5.3.4"
aio-pika = "^13.0.0"
email-validator = "^2.1.0"
structlog = "^23.2.0"
slowapi = "^0.1.9"
opentelemetry-api = "^1.21.0"
opentelemetry-sdk = "^1.21.0"
opentelemetry-exporter-prometheus = "^0.42b0"
prometheus-client = "^0.19.0"
openpyxl = "^3.1.2"
reportlab = "^4.0.7"
requests = "^2.31.0"
minio = "^7.2.0"
tenacity = "^8.2.3"
pydantic-extra-types = "^2.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
pytest-asyncio = "^0.21.1"
pytest-cov = "^4.1.0"
httpx = "^0.25.2"
ruff = "^0.1.8"
black = "^23.12.0"
isort = "^5.13.2"
mypy = "^1.7.1"
faker = "^20.1.0"
factory-boy = "^3.3.0"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
disallow_untyped_defs = true

[tool.ruff]
line-length = 100
target-version = "py311"
